radius and bounds separated
